atualização de packages

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.20.13",
-    "sqlite3": "^4.2.0"
+    "knex": "^2.1.0",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
+    "node-pre-gyp": "0.17.0",
     "nodemon": "^2.0.2"
   }
 }
