--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.2.0",
     "axios": "^0.27.2",
     "minimist": "^1.2.6",
+    "nth-check": "^2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
